text align fix

--- a/idea2020/css/style.css
+++ b/idea2020/css/style.css
@@ -266,7 +266,7 @@ body {
 
 .content__description p {
   padding: 10px 20px;
-  text-align: justify;
+  text-align: left;
   font-size: 16px;
   font-weight: 300;
 }
